@@ -45,4 +45,7 @@ int main (int argc, char ** argv) {
   // time stamping is not strictly purpose of cmdline -- but it's
   // useful anyhow
   cout << "Time now = " << cmdline.time_stamp() << endl;
+
+  // get info on machine
+  cout << "Command run on " << cmdline.unix_uname() << endl;
 }
