@@ -1,3 +1,8 @@
+2007-07-16  Gavin SALAM  <salam@lpthe.jussieu.fr>
+
+	* CmdLine.cc|hh: 
+	  added the unix_uname() member function.
+
 2007-06-30  Gavin Salam  <salam@lpthe.jussieu.fr>
 
 	* make-enum-IO.pl: 
